sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:8: error: not found: value b
  var col0=getCouleurJoueur((b-1+nbBases)%nbBases,0)
                             ^SelectBaseball:9: error: not found: value b
  var col1=getCouleurJoueur((b-1+nbBases)%nbBases,1)
                             ^